update config, script